crates/rlf-macros/tests/fail/unknown_transform.rs
use rlf::rlf;

rlf! {
    card = "card";
    bad = "{@foo card}";
}

fn main() {}
