crates/rlf-macros/tests/fail/unknown_transform.stderr
error: unknown transform '@foo'
       note: available transforms: cap, upper, lower, a, an, the
 --> tests/fail/unknown_transform.rs:5:11
  |
5 |     bad = "{@foo card}";
  |           ^^^^^^^^^^^^^
